--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -14,45 +14,46 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-03 Mon 12:43]
+#+CAPTION: Clock summary at [2016-10-03 Mon 13:51]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *45:32* |       |      | 100.0 |
+| *Total time*                                                                | *45:59* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 45:32   |       |      | 100.0 |
-| Active                                                                      |         | 45:32 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 4:37 |  10.1 |
+| Stories                                                                     | 45:59   |       |      | 100.0 |
+| Active                                                                      |         | 45:59 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 4:37 |  10.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.3 |
-| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   5.5 |
+| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   5.4 |
 | COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   0.7 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   3.9 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   3.8 |
 | COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   0.8 |
 | COMPLETED Add new index to formtter container                               |         |       | 0:19 |   0.7 |
 | COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   1.8 |
 | COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   1.0 |
-| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   1.4 |
+| COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   1.3 |
 | COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   0.8 |
 | COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   3.1 |
 | COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   0.4 |
 | COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   3.1 |
 | COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   0.6 |
 | COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   0.5 |
-| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   4.6 |
+| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   4.5 |
 | CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   1.3 |
-| COMPLETED Create the formattables model                                     |         |       | 1:32 |   3.4 |
-| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   8.7 |
+| COMPLETED Create the formattables model                                     |         |       | 1:32 |   3.3 |
+| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   8.6 |
 | COMPLETED Remove empty context                                              |         |       | 1:09 |   2.5 |
-| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   8.1 |
+| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   8.0 |
 | COMPLETED Clean up element segmentation                                     |         |       | 1:20 |   2.9 |
-| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  15.6 |
-| COMPLETED Add a banner to readme                                            |         |       | 1:29 |   3.3 |
+| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  15.4 |
+| COMPLETED Add a banner to readme                                            |         |       | 1:29 |   3.2 |
 | COMPLETED Remove formatter group                                            |         |       | 0:23 |   0.8 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       | 0:15 |   0.5 |
 | CANCELLED Remove formatter id                                               |         |       | 0:04 |   0.1 |
-| COMPLETED Analysis around terminology in formatting space                   |         |       | 3:24 |   7.5 |
+| COMPLETED Analysis around terminology in formatting space                   |         |       | 3:24 |   7.4 |
+| COMPLETED Remove =original_model_name=                                      |         |       | 0:16 |   0.6 |
 | STARTED Generate formatter interfaces                                       |         |       | 0:19 |   0.7 |
-| STARTED Refactor code around model origination                              |         |       | 2:21 |   5.2 |
+| STARTED Refactor code around model origination                              |         |       | 2:32 |   5.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -701,6 +702,12 @@ Renames:
   sub-kernel.
 - Element concept becomes Entity.
 
+*** COMPLETED Remove =original_model_name=                            :story:
+    CLOSED: [2016-10-03 Mon 13:51]
+    CLOCK: [2016-10-03 Mon 13:35]--[2016-10-03 Mon 13:51] =>  0:16
+
+This does not seem to be used any longer.
+
 *** STARTED Generate formatter interfaces                              :epic:
     CLOCK: [2016-09-30 Fri 10:58]--[2016-09-30 Fri 11:17] =>  0:19
 
@@ -838,6 +845,7 @@ Further thoughts:
   because we still need formatter properties.
 
 *** STARTED Refactor code around model origination                    :story:
+    CLOCK: [2016-10-03 Mon 13:24]--[2016-10-03 Mon 13:35] =>  0:11
     CLOCK: [2016-10-03 Mon 10:22]--[2016-10-03 Mon 12:43] =>  2:21
 
 We have the following use cases around generation type and
@@ -1083,10 +1091,6 @@ Renames:
   facet name becomes facet and formatter name archetype. Add
   sub-kernel.
 - Element concept becomes Entity.
-
-*** Remove =original_model_name=                                      :story:
-
-This does not seem to be used any longer.
 
 *** Refactor ownership hierarchy                                      :story:
 
