--- a/doc/agile/sprint_backlog_89.org
+++ b/doc/agile/sprint_backlog_89.org
@@ -14,46 +14,46 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-10-03 Mon 13:51]
+#+CAPTION: Clock summary at [2016-10-03 Mon 15:30]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *45:59* |       |      | 100.0 |
+| *Total time*                                                                | *47:35* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 45:59   |       |      | 100.0 |
-| Active                                                                      |         | 45:59 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 4:37 |  10.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.3 |
-| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   5.4 |
+| Stories                                                                     | 47:35   |       |      | 100.0 |
+| Active                                                                      |         | 47:35 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 4:37 |   9.7 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:07 |   0.2 |
+| COMPLETED Generation of formattable is incorrect                            |         |       | 2:30 |   5.3 |
 | COMPLETED Visitor includes are incorrect                                    |         |       | 0:20 |   0.7 |
-| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   3.8 |
+| COMPLETED Add includer to quilt.cpp                                         |         |       | 1:46 |   3.7 |
 | COMPLETED Add reducer to quilt.cpp                                          |         |       | 0:22 |   0.8 |
 | COMPLETED Add new index to formtter container                               |         |       | 0:19 |   0.7 |
-| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   1.8 |
-| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   1.0 |
+| COMPLETED Add path expander to quilt.cpp                                    |         |       | 0:49 |   1.7 |
+| COMPLETED Add guard expander to quilt.cpp                                   |         |       | 0:27 |   0.9 |
 | COMPLETED Investigate borked travis build                                   |         |       | 0:37 |   1.3 |
 | COMPLETED Add decoration expander to quilt.cpp                              |         |       | 0:23 |   0.8 |
-| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   3.1 |
+| COMPLETED Add aspect expander to quilt.cpp                                  |         |       | 1:26 |   3.0 |
 | COMPLETED Run tests that are passing on windows                             |         |       | 0:10 |   0.4 |
-| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   3.1 |
+| COMPLETED Add helper expander to quilt.cpp                                  |         |       | 1:26 |   3.0 |
 | COMPLETED Merge pre and post workflows                                      |         |       | 0:16 |   0.6 |
 | COMPLETED Fix bug in aspect and helper generation                           |         |       | 0:15 |   0.5 |
-| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   4.5 |
+| COMPLETED Investigate element annotation support                            |         |       | 2:05 |   4.4 |
 | CANCELLED Add streaming settings expander                                   |         |       | 0:36 |   1.3 |
-| COMPLETED Create the formattables model                                     |         |       | 1:32 |   3.3 |
-| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   8.6 |
-| COMPLETED Remove empty context                                              |         |       | 1:09 |   2.5 |
-| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   8.0 |
-| COMPLETED Clean up element segmentation                                     |         |       | 1:20 |   2.9 |
-| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  15.4 |
-| COMPLETED Add a banner to readme                                            |         |       | 1:29 |   3.2 |
+| COMPLETED Create the formattables model                                     |         |       | 1:32 |   3.2 |
+| COMPLETED Hook formattables into formatters                                 |         |       | 3:58 |   8.3 |
+| COMPLETED Remove empty context                                              |         |       | 1:09 |   2.4 |
+| COMPLETED Review main classes in quilt.cpp                                  |         |       | 3:42 |   7.8 |
+| COMPLETED Clean up element segmentation                                     |         |       | 1:20 |   2.8 |
+| COMPLETED Get OSX build to compile code                                     |         |       | 7:05 |  14.9 |
+| COMPLETED Add a banner to readme                                            |         |       | 1:29 |   3.1 |
 | COMPLETED Remove formatter group                                            |         |       | 0:23 |   0.8 |
 | COMPLETED Add more types to =quilt::cpp= canned tests                       |         |       | 0:15 |   0.5 |
 | CANCELLED Remove formatter id                                               |         |       | 0:04 |   0.1 |
-| COMPLETED Analysis around terminology in formatting space                   |         |       | 3:24 |   7.4 |
+| COMPLETED Analysis around terminology in formatting space                   |         |       | 3:24 |   7.1 |
 | COMPLETED Remove =original_model_name=                                      |         |       | 0:16 |   0.6 |
+| COMPLETED Refactor code around model origination                            |         |       | 4:08 |   8.7 |
 | STARTED Generate formatter interfaces                                       |         |       | 0:19 |   0.7 |
-| STARTED Refactor code around model origination                              |         |       | 2:32 |   5.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -708,143 +708,12 @@ Renames:
 
 This does not seem to be used any longer.
 
-*** STARTED Generate formatter interfaces                              :epic:
-    CLOCK: [2016-09-30 Fri 10:58]--[2016-09-30 Fri 11:17] =>  0:19
-
-We should create another template language, in addition to stitch:
-"wale". Wale is a very simple language that has templates that just do
-token replacement. The tokens must have a special format:
-={{{TOKEN}}}=. We receive a map of keys to values and do a blind
-replacement to the keys on the wale document.
-
-This links to stitch as follows:
-
-- create a single file implementation of a formatter. It will
-  implement both the provider interface and the appropriate formatter
-  interface. It will call the stitch method to start off with. There
-  are no headers, just cpp. It does the formatter registration.
-- add support in stitch for "named sections": its possible to start a
-  section and assign it a name. A stitch template will have two
-  sections: inclusion provision and formatting.
-- add support in stitch for "wale variables". These are just kvp's
-  defined at the top:
-
-: <#@ wale.variable="formatter_name=abcd" #>
-
-  wale variables and sections are converted into a kvp container for
-  wale input. Examples: facet, formatter name, etc.
-- convert the formatter code into a wale template, adding wale
-  variables as required.
-- update stitch to detect wale usage and to call wale in those
-  cases. This could be done by supplying a wale template:
-
-: <#@ wale.template="abcd.wale" #>
-
-- note that wale could be useful outside of stitch, for example for
-  dart: we could wale-lise utility and then instantiate it for a given
-  project.
-
-*Previous Understanding*
-
-It should be possible to generate some trivial types such as formatter
-interfaces, formatter container, registrar and so on. For this we
-need:
-
-- a mustache type template;
-- a set of fields from yarn types to be exposed to mustache;
-- a list of types to iterate through.
-
-Once we got this we could instantiate the templates. To integrate this
-with knit we would need some way of specifying which types the
-iteration would be over. We could mark a specific type with a given
-stereotype, and then supply say the base class ("all leaf descendants
-of xyz"). Dogen would then locate the descendants and for each call
-the template.
-
-For registrar and container its a bit trickier because we want a
-collection of types in one go.
-
-We also need a way to keep these templates away from the main (user
-visible) code, since they are useful only for dogen.
-
-See also [[https://github.com/cierelabs/boostache/tree/develop][boostache]].
-
-Notes:
-
-- we will need some "special" tags for copyright, includes
-  etc. Includes will be particularly special because we need to
-  augment the include list with additional includes. However, we may
-  not even need to be aware of this.
-
-*Stitch meta-templates*
-
-*Note*: re-read story [[https://github.com/DomainDrivenConsulting/dogen/blob/master/doc/agile/sprint_backlog_64.org#code-generating-formatters-as-text-templates][Code-generating formatters as text templates]] as
-some of these ideas were already there. Also: see [[https://github.com/no1msd/mstch][mstch]].
-
-In the quest for defining a single stitch template which then becomes
-a formatter - without any additional infrastructure required at all -
-we hit on an idea: stitch meta-templates. Basically we would have two
-different kinds of inputs to stitch: the template itself and the
-meta-template. Meta-template is a provisional name. The meta-template
-would define the formatter layout:
-
-- class definition, using a stitch variable for the yarn element type
-- registration of the formatter
-- definition of a method for the includes
-- definition of a method for the stitching
-
-These last two would result in the creation of "regions". These
-regions must then be "instantiated" in the template. This could easily
-be achieved with some kind of new element:
-
-: <#% region "includes">
-
-Or some such stitch construct. All lines after this line are part of
-the region "includes" until a new region is defined. The region is
-stitched and then transposed to the place in the meta-template where
-it was defined, for example:
-
-: int f(int a, int b) {
-: <#% region "includes">
-: }
-
-Would result in copying across the region into these brackets. This
-will make defining multiple functions very easy, without having to
-supply command line arguments, etc.
-
-Notes:
-
-- meta-templates are supplied as command line arguments.
-- potential extension: =meta.stitch=
-- stitch should still work on non-meta-template mode.
-- some of these ideas had already been covered on another story but
-  can't find it in backlog. It could be part of the original stitch
-  epic. We need to revisit it to see if it contains additional
-  insights.
-- when an error occurs, it would be great if we could pin point the
-  error to the template or to the meta-template. This is more of a
-  concern when we add clang compilation support.
-
-Further thoughts:
-
-- there are two approaches for this: we could integrate stitch tighter
-  with knit and have it return "chunks" of processed code instead of
-  files. As per story "Integration of stitch and dogen", dogen would
-  then be responsible for writing the header file as per methods
-  defined in the class diagram. Each method would be marked as a
-  region. Meta-data in the class associates a template with the
-  class. Knitter uses stitch to convert the template into regions, and
-  then takes these regions and inserts them into a generated
-  file. This approach is very clever and requires a lot of machinery.
-- the easier approach uses meta-templates. Class diagram associates
-  both meta-template and template with class via meta-data. We could
-  possibly also have a stitch stereotype to make it clearer. Yarn has
-  a stitch class with attributes of these parameters. Dogen
-  instantiates stitch (probably within quilt) with the parameters and
-  generates the file. Actually we probably can't have this in quilt
-  because we still need formatter properties.
-
-*** STARTED Refactor code around model origination                    :story:
+*** COMPLETED Refactor code around model origination                  :story:
+    CLOSED: [2016-10-03 Mon 15:30]
+    CLOCK: [2016-10-03 Mon 15:24]--[2016-10-03 Mon 15:30] =>  0:06
+    CLOCK: [2016-10-03 Mon 14:16]--[2016-10-03 Mon 15:23] =>  1:07
+    CLOCK: [2016-10-03 Mon 13:56]--[2016-10-03 Mon 14:15] =>  0:19
+    CLOCK: [2016-10-03 Mon 13:52]--[2016-10-03 Mon 13:56] =>  0:04
     CLOCK: [2016-10-03 Mon 13:24]--[2016-10-03 Mon 13:35] =>  0:11
     CLOCK: [2016-10-03 Mon 10:22]--[2016-10-03 Mon 12:43] =>  2:21
 
@@ -988,6 +857,142 @@ we now call proxy models). The only tasks missing are:
 Actually this is probably best handled in yarn, so that dia and json
 have common logic. We should just add the fields and add the
 processing in yarn somewhere.
+
+*** STARTED Generate formatter interfaces                              :epic:
+    CLOCK: [2016-09-30 Fri 10:58]--[2016-09-30 Fri 11:17] =>  0:19
+
+We should create another template language, in addition to stitch:
+"wale". Wale is a very simple language that has templates that just do
+token replacement. The tokens must have a special format:
+={{{TOKEN}}}=. We receive a map of keys to values and do a blind
+replacement to the keys on the wale document.
+
+This links to stitch as follows:
+
+- create a single file implementation of a formatter. It will
+  implement both the provider interface and the appropriate formatter
+  interface. It will call the stitch method to start off with. There
+  are no headers, just cpp. It does the formatter registration.
+- add support in stitch for "named sections": its possible to start a
+  section and assign it a name. A stitch template will have two
+  sections: inclusion provision and formatting.
+- add support in stitch for "wale variables". These are just kvp's
+  defined at the top:
+
+: <#@ wale.variable="formatter_name=abcd" #>
+
+  wale variables and sections are converted into a kvp container for
+  wale input. Examples: facet, formatter name, etc.
+- convert the formatter code into a wale template, adding wale
+  variables as required.
+- update stitch to detect wale usage and to call wale in those
+  cases. This could be done by supplying a wale template:
+
+: <#@ wale.template="abcd.wale" #>
+
+- note that wale could be useful outside of stitch, for example for
+  dart: we could wale-lise utility and then instantiate it for a given
+  project.
+
+*Previous Understanding*
+
+It should be possible to generate some trivial types such as formatter
+interfaces, formatter container, registrar and so on. For this we
+need:
+
+- a mustache type template;
+- a set of fields from yarn types to be exposed to mustache;
+- a list of types to iterate through.
+
+Once we got this we could instantiate the templates. To integrate this
+with knit we would need some way of specifying which types the
+iteration would be over. We could mark a specific type with a given
+stereotype, and then supply say the base class ("all leaf descendants
+of xyz"). Dogen would then locate the descendants and for each call
+the template.
+
+For registrar and container its a bit trickier because we want a
+collection of types in one go.
+
+We also need a way to keep these templates away from the main (user
+visible) code, since they are useful only for dogen.
+
+See also [[https://github.com/cierelabs/boostache/tree/develop][boostache]].
+
+Notes:
+
+- we will need some "special" tags for copyright, includes
+  etc. Includes will be particularly special because we need to
+  augment the include list with additional includes. However, we may
+  not even need to be aware of this.
+
+*Stitch meta-templates*
+
+*Note*: re-read story [[https://github.com/DomainDrivenConsulting/dogen/blob/master/doc/agile/sprint_backlog_64.org#code-generating-formatters-as-text-templates][Code-generating formatters as text templates]] as
+some of these ideas were already there. Also: see [[https://github.com/no1msd/mstch][mstch]].
+
+In the quest for defining a single stitch template which then becomes
+a formatter - without any additional infrastructure required at all -
+we hit on an idea: stitch meta-templates. Basically we would have two
+different kinds of inputs to stitch: the template itself and the
+meta-template. Meta-template is a provisional name. The meta-template
+would define the formatter layout:
+
+- class definition, using a stitch variable for the yarn element type
+- registration of the formatter
+- definition of a method for the includes
+- definition of a method for the stitching
+
+These last two would result in the creation of "regions". These
+regions must then be "instantiated" in the template. This could easily
+be achieved with some kind of new element:
+
+: <#% region "includes">
+
+Or some such stitch construct. All lines after this line are part of
+the region "includes" until a new region is defined. The region is
+stitched and then transposed to the place in the meta-template where
+it was defined, for example:
+
+: int f(int a, int b) {
+: <#% region "includes">
+: }
+
+Would result in copying across the region into these brackets. This
+will make defining multiple functions very easy, without having to
+supply command line arguments, etc.
+
+Notes:
+
+- meta-templates are supplied as command line arguments.
+- potential extension: =meta.stitch=
+- stitch should still work on non-meta-template mode.
+- some of these ideas had already been covered on another story but
+  can't find it in backlog. It could be part of the original stitch
+  epic. We need to revisit it to see if it contains additional
+  insights.
+- when an error occurs, it would be great if we could pin point the
+  error to the template or to the meta-template. This is more of a
+  concern when we add clang compilation support.
+
+Further thoughts:
+
+- there are two approaches for this: we could integrate stitch tighter
+  with knit and have it return "chunks" of processed code instead of
+  files. As per story "Integration of stitch and dogen", dogen would
+  then be responsible for writing the header file as per methods
+  defined in the class diagram. Each method would be marked as a
+  region. Meta-data in the class associates a template with the
+  class. Knitter uses stitch to convert the template into regions, and
+  then takes these regions and inserts them into a generated
+  file. This approach is very clever and requires a lot of machinery.
+- the easier approach uses meta-templates. Class diagram associates
+  both meta-template and template with class via meta-data. We could
+  possibly also have a stitch stereotype to make it clearer. Yarn has
+  a stitch class with attributes of these parameters. Dogen
+  instantiates stitch (probably within quilt) with the parameters and
+  generates the file. Actually we probably can't have this in quilt
+  because we still need formatter properties.
 
 *** Add the concept of hand-crafting                                  :story:
 
